--- a/app/src/main/res/layout/layout_activity_widget.xml
+++ b/app/src/main/res/layout/layout_activity_widget.xml
@@ -6,7 +6,6 @@
     android:layout_height="wrap_content"
     tools:context=".screenshot.Screen">
 
-
     <RelativeLayout
         android:id="@+id/relativeLayoutParent"
         android:layout_width="wrap_content"
@@ -29,7 +28,6 @@
                 app:cardElevation="1dp">
 
                 <ImageView
-                    android:id="@+id/cancel"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_gravity="center"
@@ -45,7 +43,6 @@
                 android:backgroundTint="@color/white"
                 app:cardCornerRadius="23dp"
                 app:cardElevation="0dp">
-
 
                 <ImageView
                     android:id="@+id/camera_video"
@@ -67,7 +64,6 @@
                 app:cardCornerRadius="23dp"
                 app:cardElevation="0dp">
 
-
                 <ImageView
                     android:id="@+id/camera"
                     android:layout_width="25dp"
@@ -86,7 +82,6 @@
                 app:cardCornerRadius="23dp"
                 app:cardElevation="0dp">
 
-
                 <ImageView
                     android:id="@+id/photo"
                     android:layout_width="22dp"
@@ -97,13 +92,13 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/id_card_cancel"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:layout_marginTop="13dp"
                 android:backgroundTint="@color/white"
                 app:cardCornerRadius="23dp"
                 app:cardElevation="0dp">
-
 
                 <ImageView
                     android:layout_width="20dp"
@@ -112,7 +107,6 @@
                     android:src="@drawable/ic_cancel"
                     tools:ignore="ContentDescription" />
             </androidx.cardview.widget.CardView>
-
 
         </LinearLayout>
 
@@ -128,6 +122,7 @@
                 android:layout_height="45dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:contentDescription="@string/todo"
                 android:src="@drawable/ic_circle" />
 
             <ImageView
