--- a/app/src/main/res/layout/video_recorder.xml
+++ b/app/src/main/res/layout/video_recorder.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:id="@+id/rootLayout"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ToggleButton
@@ -10,8 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:textOff="Record"
-        android:textOn="Stop" />
+        android:textOff="@string/record"
+        android:textOn="@string/stop" />
 
     <VideoView
         android:id="@+id/videoView"
